--- a/style/p1.css
+++ b/style/p1.css
@@ -269,6 +269,81 @@ a {
     opacity: 1;
 }
 
+/*section3*/
+#contents > .inner > #section3{
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.window-container {
+    width: 600px;
+    height: 500px;
+    border: 3px solid #f1f1f1;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+}
+
+.window-container .row {
+    padding: 10px;
+    background: #f1f1f1;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+}
+  
+.window-container .row .column {
+    float: left;
+}
+  
+.window-container .row .left {
+    width: 15%;
+}
+  
+.window-container .row .right {
+    width: 10%;
+}
+  
+.window-container .row .middle {
+    width: 75%;
+}
+
+.window-container .row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+  
+/* Three dots */
+.window-container .dot {
+    margin-top: 4px;
+    height: 12px;
+    width: 12px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+}
+.window-container .row .middle input[type=text] {
+    width: 100%;
+    border-radius: 3px;
+    border: none;
+    background-color: white;
+    margin-top: -8px;
+    height: 25px;
+    color: #666;
+    padding: 5px;
+}
+.window-container .row .right .bar {
+    width: 17px;
+    height: 3px;
+    background-color: #aaa;
+    margin: 3px 0;
+    display: block;
+}
+
+.window-content {
+    padding: 10px;
+}
+
 @media (max-width: 800px){
     #nav .menu {
         display: none;
