--- a/style/p1.css
+++ b/style/p1.css
@@ -18,7 +18,7 @@ a {
     background:rgba(255, 0, 0, 0.719);
 }
 .color-puff-2{
-    background:rgba(255, 255, 0, 0.719);
+    background:rgba(255, 236, 99, 0.719);
 }
 .color-puff-3{
     background:rgba(0, 0, 255, 0.719);
@@ -141,15 +141,9 @@ a {
 
 /*scroll - mouse*/
 .scroll-downs{
-    position: absolute;
-    top: 80vh;
-    right: 0;
-    bottom: 0;
-    left: 0;
     margin: 0 auto;
     width: 34px;
     height: 55px;
-    z-index: 98;
 }
 .mousey{
     width: 3px;
@@ -160,13 +154,12 @@ a {
     box-sizing: content-box;
 }
 .scroller{
-    width: 3px;
+    width: 5px;
     height: 8px;
     border-radius: 25%;
     background-color: rgb(242, 222, 38);
     animation-name: scroll;
     animation-duration: 1.2s;
-    animation-timing-function: cubic-bezier(.15, .41, .69, .94);
     animation-iteration-count: infinite;
 }
 .scroll-downs p {
@@ -186,30 +179,10 @@ a {
         opacity: 1;
     }
     100%{
-        transform: translateY(15px);
+        transform: translateY(18px);
         opacity: 0;
     }
 
-    @keyframes downup{
-        0% {
-            opacity: 0;
-            transform: translateY(0, 100px);
-        }
-        100% {
-            opacity: 1;
-            transform: translate(0, 0);
-        }
-    }
-    @keyframes bounce{
-        from,
-        to {
-            margin-bottom: 0;
-            animation-timing-function: ease-out;
-        } 50% {
-            margin-bottom: 8px;
-            animation-timing-function: ease-in;
-        }
-    } 
 }
 
 /*contents*/
@@ -219,13 +192,16 @@ a {
 #contents > .inner > div {
     min-height: 100vh;
     display: flex;
-    justify-content: space-around;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
+    align-self: center;
 }
 #contents > .inner > div h2 {
     font-size: 60px;
-    font-weight: 100;
     text-transform: uppercase;
+    margin:2rem 0;
 }
 #contents > .inner > div h2 span{
     font-family: 'Alfa Slab One', sans-serif;
@@ -235,13 +211,13 @@ a {
 
 
 /*text animation*/
-#contents .inner h2{
+#contents .inner div{
     transition: all .6s ease-in;
 }
-#section2 h2 {
+#section2 h2, #section2 .about_box {
     opacity: 0;
 }
-#section3 h2 {
+#section3 h2, #section3 .window-container {
     opacity: 0;
 }
 #section4 h2 {
@@ -253,10 +229,10 @@ a {
 #section6 h2 {
     opacity: 0;
 }
-#section2.show h2{
+#section2.show h2, #section2.show .about_box{
     opacity: 1;
 }
-#section3.show h2{
+#section3.show h2, #section3.show .window-container{
     opacity: 1;
 }
 #section4.show h2{
@@ -269,15 +245,60 @@ a {
     opacity: 1;
 }
 
-/*section3*/
-#contents > .inner > #section3{
-    flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+/*section1*/
+/*section2*/
+#contents > .inner > #section2 h2 span{
+    color: #222;
 }
+#section2{
+    justify-content: space-around;
+    background-image: linear-gradient(
+        45deg,
+        #ffd966 25%,
+        transparent 25%,
+        transparent 75%,
+        #ffd966 75%,
+        #ffd966
+    ),
+    linear-gradient(
+        -45deg,
+        #ffd966 25%,
+        transparent 25%,
+        transparent 75%,
+        #ffd966 75%,
+        #ffd966
+    );
+    background-size: 60px 60px;
+    background-position: 0 0;
+    animation: slide 4s infinite linear;
+}
+
+@keyframes slide {
+    from {
+      background-position: 0 0;
+    }
+  
+    to {
+      background-position: -120px 60px;
+    }
+}
+.about_box {
+    width: 80%;
+    min-height: 60vh;
+    border: 3px solid black;
+    border-radius: 5px;
+    background: white;
+    box-shadow: 8px 8px 0 rgba(0, 0, 0, 0.2);
+}
+.message {
+    font-size: 1.1rem;
+    margin-bottom: 1.6rem;
+    margin-top: 1rem;
+}
+
+/*section3*/
 .window-container {
-    width: 600px;
+    width: 70%;
     height: 500px;
     border: 3px solid #f1f1f1;
     border-top-left-radius: 4px;
@@ -296,7 +317,7 @@ a {
 }
   
 .window-container .row .left {
-    width: 15%;
+    width: 10%;
 }
   
 .window-container .row .right {
@@ -304,7 +325,7 @@ a {
 }
   
 .window-container .row .middle {
-    width: 75%;
+    width: 80%;
 }
 
 .window-container .row:after {
@@ -320,7 +341,8 @@ a {
     width: 12px;
     background-color: #bbb;
     border-radius: 50%;
-    display: inline-block;
+    float:left;
+    margin-right:5px;
 }
 .window-container .row .middle input[type=text] {
     width: 100%;
@@ -380,4 +402,16 @@ a {
         font-size: 6vw;
         font-weight: 300;
     }
+}
+
+/*section4*/
+#contents > .inner > #section4{
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+#contents > .inner > #section4 h2{
+    font-size: 6vw;
+    padding: 0 2rem;
+    writing-mode: vertical-rl;
 }
