--- a/style/p1.css
+++ b/style/p1.css
@@ -203,7 +203,7 @@ a {
     text-transform: uppercase;
     margin:2rem 0;
 }
-#contents > .inner > div h2 span{
+#contents > .inner > div h2{
     font-family: 'Alfa Slab One', sans-serif;
     color: rgb(242, 222, 38);
     font-style: italic;
@@ -246,8 +246,11 @@ a {
 }
 
 /*section1*/
+#contents > .inner > #section1 h2{
+    margin-bottom: 8rem;
+}
 /*section2*/
-#contents > .inner > #section2 h2 span{
+#contents > .inner > #section2 h2{
     color: #222;
 }
 #section2{
@@ -300,16 +303,15 @@ a {
 .window-container {
     width: 70%;
     height: 500px;
-    border: 3px solid #f1f1f1;
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
+    border: 8px solid #f1f1f1;
+    border-radius: 4px;
 }
 
 .window-container .row {
     padding: 10px;
     background: #f1f1f1;
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
+    border-top-left-radius: 1px;
+    border-top-right-radius: 1px;
 }
   
 .window-container .row .column {
@@ -410,8 +412,19 @@ a {
     flex-wrap: wrap;
     justify-content: space-between;
 }
-#contents > .inner > #section4 h2{
+#contents > .inner > #section4 > h2.purple{
     font-size: 6vw;
-    padding: 0 2rem;
+    padding: 1rem 2rem;
     writing-mode: vertical-rl;
+    background-clip: text;
+    -webkit-background-clip: text;
+	text-transform: uppercase;
+    background-image: url(../images/purple.gif);
+    background-position: 30% 100%;
+	background-size: cover;
+	color: transparent;
+}
+
+#contents > .inner > #section4 > h2.purple2{
+    background-position: right;
 }
