--- a/style/p1.css
+++ b/style/p1.css
@@ -5,7 +5,7 @@ html{
 body{
     font-family: 'Noto Sans KR', sans-serif;
     overflow-x:hidden;
-    background:#fff;
+    background:rgba(255, 0, 0, 0.719);
     transition: background .6s ease-in;
 }
 li{
@@ -142,16 +142,15 @@ a {
 /*scroll - mouse*/
 .scroll-downs{
     margin: 0 auto;
-    width: 34px;
-    height: 55px;
 }
 .mousey{
-    width: 3px;
+    width: 5px;
     padding: 7px 12px;
     height: 35px;
-    border-radius: 25px;
-    border: 2px solid rgb(242, 222, 38);
+    border-radius: 22px;
+    border: 4px solid rgb(242, 222, 38);
     box-sizing: content-box;
+    margin: 0 auto;
 }
 .scroller{
     width: 5px;
@@ -164,10 +163,9 @@ a {
 }
 .scroll-downs p {
     font-family: 'Alfa Slab One', sans-serif;
-    text-indent: -3rem;
-    letter-spacing: 1rem;
+    font-size:1vw;
     color: rgb(242, 222, 38);
-    padding:1rem 0;
+    padding: 1rem 0;
 }
 @keyframes scroll{
 
@@ -199,9 +197,9 @@ a {
     align-self: center;
 }
 #contents > .inner > div h2 {
-    font-size: 60px;
+    font-size: 4vw;
     text-transform: uppercase;
-    margin:2rem 0;
+    margin: 2vw 0;
 }
 #contents > .inner > div h2{
     font-family: 'Alfa Slab One', sans-serif;
@@ -245,14 +243,7 @@ a {
     opacity: 1;
 }
 
-/*section1*/
-#contents > .inner > #section1 h2{
-    margin-bottom: 8rem;
-}
 /*section2*/
-#contents > .inner > #section2 h2{
-    color: #222;
-}
 #section2{
     justify-content: space-around;
     background-image: linear-gradient(
@@ -288,21 +279,16 @@ a {
 .about_box {
     width: 80%;
     min-height: 60vh;
-    border: 3px solid black;
+    border: 4px solid black;
     border-radius: 5px;
     background: white;
     box-shadow: 8px 8px 0 rgba(0, 0, 0, 0.2);
-}
-.message {
-    font-size: 1.1rem;
-    margin-bottom: 1.6rem;
-    margin-top: 1rem;
 }
 
 /*section3*/
 .window-container {
     width: 70%;
-    height: 500px;
+    min-height: 60vh;
     border: 8px solid #f1f1f1;
     border-radius: 4px;
 }
@@ -363,9 +349,19 @@ a {
     margin: 3px 0;
     display: block;
 }
-
 .window-content {
     padding: 10px;
+}
+
+/*section4*/
+#contents > .inner > #section4{
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+#contents > .inner > #section4 > h2.purple{
+    padding: 1rem 2rem;
+    writing-mode: vertical-rl;
 }
 
 @media (max-width: 800px){
@@ -404,27 +400,16 @@ a {
         font-size: 6vw;
         font-weight: 300;
     }
+    .window-container .row .left {
+        width: 15%;
+    }
+      
+    .window-container .row .right {
+        width: 15%;
+    }
+      
+    .window-container .row .middle {
+        width: 70%;
+    }
 }
 
-/*section4*/
-#contents > .inner > #section4{
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-#contents > .inner > #section4 > h2.purple{
-    font-size: 6vw;
-    padding: 1rem 2rem;
-    writing-mode: vertical-rl;
-    background-clip: text;
-    -webkit-background-clip: text;
-	text-transform: uppercase;
-    background-image: url(../images/purple.gif);
-    background-position: 30% 100%;
-	background-size: cover;
-	color: transparent;
-}
-
-#contents > .inner > #section4 > h2.purple2{
-    background-position: right;
-}
