슬라이드 만들기, 버튼 만들기

--- a/style/p1.css
+++ b/style/p1.css
@@ -214,7 +214,7 @@ a {
 #section2 .about_box {
     opacity: 0;
 }
-#section3 .window-container {
+#section3 .window-container, #section3 .slide_btn {
     opacity: 0;
 }
 #section4 h2 {
@@ -229,7 +229,7 @@ a {
 #section2.show .about_box{
     opacity: 1;
 }
-#section3.show .window-container{
+#section3.show .window-container, #section3.show .slide_btn{
     opacity: 1;
 }
 #section4.show h2{
@@ -285,16 +285,14 @@ a {
 }
 
 /*section3*/
-
-#contents > .inner > #section3 h2{
-    width: 100%;
+#contents > .inner > #section3{
+    position: relative;
 }
 
 .window-container {
-    width: 80vw;
+    width: 70vw;
     min-width: 300px;
-    border: 8px solid #f1f1f1;
-    border-radius: 4px;
+    cursor: pointer;
 }
 
 .window-container .row {
@@ -354,42 +352,84 @@ a {
 }
 
 .window-container .main_visual{
+    box-sizing: border-box;
     width: 100%;
     background: #fff;
-    position: relative;
+    border: 8px solid #f1f1f1;
+    border-top: none;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
 }
-
-.window-container .main_visual{
-    content:"";
-    display: block;
-    padding-top: 60%;
-}
-/*
-.window-container .project{
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    top: 0;
-    background: #666;
-}
-
-#contents > .inner > #section3 > .window-container .project{
-    transition: background-position 10s ease;
-    background-position: 0 0;
-    background-size: 100% auto;
-    overflow: hidden;
-    cursor: pointer;
-}
-
-#contents > .inner > #section3 > .window-container:hover .project{
-    background-position: 0 100%;
-}
-*/
 
 .main_visual{
-    width: 
+    position: relative;
+    width: 100%; 
+    height: 600px;
+    overflow: hidden;
 }
+
+.visual_container{
+    width: 400%;
+    height: 100%;
+    position: absolute;
+    top:0;
+    left:0;
+}
+
+.visual_container li{
+    width: 25%;
+    height: 100%;
+    float: left;
+    background-position: 0 0;
+    background-size: cover;
+    transition: background-position 10s ease-in;
+}
+.window-container:hover .visual_container li{
+    background-position: 0 100%;
+}
+
+.visual_container li:first-child{
+    background-image: url('http://puiux.kr/images/lolimg.png');
+}
+.visual_container li:nth-child(2){
+    background-image: url('http://puiux.kr/images/mnhimg.png');
+    transition: background-position 6s ease-in;
+}
+.visual_container li:nth-child(3){
+    background-image: url('http://puiux.kr/images/datimg.png');
+    transition: background-position 8s ease-in;
+}
+.visual_container li:last-child{
+    background-image: url('http://puiux.kr/images/celloimg.png');
+}
+.slide_btn{
+    cursor: pointer;
+    font-size: 1.4rem;
+    outline: 1px solid red;
+}
+.slide_btn .back, .slide_btn .next{
+    border: solid #fff;
+    border-width: 0 1vw 1vw 0;
+    display: inline-block;
+    padding: 3px;
+    width: 3vw;
+    height: 3vw;
+    position: absolute;
+    top: 55%;
+    transform: translateY(-50%);
+}
+.slide_btn .back{
+    transform: rotate(135deg);
+    -webkit-transform: rotate(135deg);
+    left: 5vw;
+
+}
+.slide_btn .next{
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+    right: 5vw;
+}
+
 
 /*section4*/
 #contents > .inner > #section4{
@@ -439,15 +479,15 @@ a {
         font-weight: 300;
     }
     .window-container .row .left {
-        width: 15%;
+        width: 20%;
     }
       
     .window-container .row .right {
-        width: 15%;
+        width: 20%;
     }
       
     .window-container .row .middle {
-        width: 70%;
+        width: 60%;
     }
 }
 
