--- a/style/p1.css
+++ b/style/p1.css
@@ -184,65 +184,59 @@ a {
 }
 
 /*contents*/
-#contents {
-    text-align: center;
-}
-#contents > .inner > div {
+.inner > div {
     min-height: 100vh;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    align-self: center;
 }
-#contents > .inner > div h2 {
+.inner > div > h2 {
+    color: rgb(242, 222, 38);
     font-size: 4vw;
     text-transform: uppercase;
     margin: 2vw 0;
     font-family: 'Alfa Slab One', sans-serif;
     font-style: italic;
 }
-
-
 /*text animation*/
-#contents .inner div{
+.inner > div{
     transition: all .6s ease-in;
 }
-#section2 .about_box {
+#section2{
     opacity: 0;
 }
-#section3 .window-container, #section3 .slide_btn {
+#section3 {
     opacity: 0;
 }
-#section4 h2 {
+#section4{
     opacity: 0;
 }
-#section5 h2 {
+#section5{
     opacity: 0;
 }
-#section6 h2 {
+#section6{
     opacity: 0;
 }
-#section2.show .about_box{
+#section2.show{
     opacity: 1;
 }
-#section3.show .window-container, #section3.show .slide_btn{
+#section3.show{
     opacity: 1;
 }
-#section4.show h2{
+#section4.show{
     opacity: 1;
 }
-#section5.show h2{
+#section5.show{
     opacity: 1;
 }
-#section6.show h2{
+#section6.show{
     opacity: 1;
 }
 
 /*section2*/
 #section2{
-    justify-content: space-around;
     background-image: linear-gradient(
         45deg,
         #ffd966 25%,
@@ -262,6 +256,9 @@ a {
     background-size: 60px 60px;
     background-position: 0 0;
     animation: slide 4s infinite linear;
+}
+#section2 h2{
+    color: #222;
 }
 
 @keyframes slide {
@@ -283,7 +280,7 @@ a {
 }
 
 /*section3*/
-#contents > .inner > #section3{
+#section3{
     position: relative;
 }
 
@@ -362,7 +359,7 @@ a {
 .main_visual{
     position: relative;
     width: 100%; 
-    height: 600px;
+    min-height: 60vh;
     overflow: hidden;
 }
 
@@ -427,11 +424,19 @@ a {
     -webkit-transform: rotate(-45deg);
     right: 5vw;
 }
-
-
-#contents > .inner > #section5 > h2{
-    padding: 1rem 2rem;
+/*section5*/
+#section5{
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+#section5 > h2{
+    letter-spacing: -.8vw;
     writing-mode: vertical-rl;
+    text-orientation: upright;
+}
+#section5 > h2.birth{
+    order: 9;
 }
 
 @media (max-width: 800px){
