--- a/style/p1.css
+++ b/style/p1.css
@@ -80,23 +80,28 @@ a {
 #nav.on {
     position: fixed;
     top:0;
-    background-color: rgba(255,255,255,1);
-    -webkit-box-shadow: 0 2px 10px rgba(0,0,0,.1);
+    /*-webkit-box-shadow: 0 2px 10px rgba(0,0,0,.1);
     -moz-box-shadow: 0 2px 10px rgba(0,0,0,.1);
-    box-shadow: 0 2px 10px rgba(0,0,0,.1);
+    box-shadow: 0 2px 10px rgba(0,0,0,.1);*/
 }
 #nav.on h1 a{
-    color: #222;
+    color: #000;
 }
 #nav.on ul li a{
-    color:rgb(163, 159, 159);
+    color: #fff;
 }
 #nav.on ul li.active a{
-    color:#222;
+    color:#000;
 }
 #nav.on ul li.active a:after{
     width: 100%;
     left: 0;
+}
+#nav ul li a:hover:after{
+    width: 100%;
+    left: 0;
+    background: #fff;
+    transition: all .8s;
 }
 
 #nav .mNav{
@@ -273,12 +278,59 @@ a {
 .about_box {
     width: 80%;
     min-height: 60vh;
-    border: 4px solid black;
+    border: 4px solid #000;
     border-radius: 5px;
     background: white;
     box-shadow: 8px 8px 0 rgba(0, 0, 0, 0.2);
+    display:flex;
+    justify-content: space-around;
+    align-items: center;
 }
-
+.about_box > div{
+    position: relative;
+    display: inline-block;
+    border:3px solid #000;
+    width: 20vw;
+    height: 20vw;
+    margin-right: 1rem;
+    box-shadow: 0 0 0 black;
+    transition: all 0.2s;
+}
+.about_box > div:hover{
+    box-shadow: 0.8rem 0.8rem 0 black;
+    transform: translate(-0.4rem, -0.4rem);
+}
+.about_box > div > div{
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    left: 50%;
+    background: #000;
+    width: 50%;
+    height: 50%;
+    border-radius: 50%;
+}
+.about_box > div > div:after{
+    font-family: 'Alfa Slab One', sans-serif;
+    font-style: italic;
+    font-size: 1.6vw;
+    content: "";
+    display: block;
+    color: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.about_box > div:first-child > div:after{
+    content: "HTML5";
+}
+.about_box > div:nth-child(2) > div:after{
+    content: "CSS3";
+}
+.about_box > div:nth-child(3) > div:after{
+    content: "Javascript";
+}
 /*section3*/
 #section3{
     position: relative;
@@ -425,38 +477,6 @@ a {
     right: 5vw;
 }
 /*section5*/
-#section5{
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    outline: 3px solid #fff;
-    overflow: hidden;
-}
-#section5 > h2{
-    letter-spacing: -.8vw;
-    writing-mode: vertical-rl;
-    text-orientation: upright;
-}
-#section5 > h2.birth{
-    order: 9;
-    animation-name: headline;
-    animation-duration: 6s;
-    animation-iteration-count: infinite;
-}
-@keyframes headline{
-    0% {
-        transform: translate3d(0, 0, 0);
-    }
-    25% {
-        transform: translate3d(0, 150%, 0);
-    }
-    50%{
-
-    }
-    100%{
-        
-    }
-}
 
 @media (max-width: 800px){
     #nav .menu {
@@ -493,6 +513,20 @@ a {
     #contents > div h2{
         font-size: 6vw;
         font-weight: 300;
+    }
+    .about_box {
+        display:flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+    }
+    .about_box > div{
+        width: 60vw;
+        height: 20vw;
+    }
+    .about_box > div > div{
+        width: 10vw;
+        height: 10vw;
     }
     .window-container .row .left {
         width: 20%;
