--- a/style/p1.css
+++ b/style/p1.css
@@ -30,7 +30,7 @@ a {
     background:rgba(0, 128, 0, 0.719);
 }
 .color-puff-6{
-    background:rgba(255, 192, 203, 0.719);
+    background:rgba(20, 17, 20, 1);
 }
 
 /*nav*/
@@ -140,9 +140,6 @@ a {
 }
 
 /*scroll - mouse*/
-.scroll-downs{
-    margin: 0 auto;
-}
 .mousey{
     width: 5px;
     padding: 7px 12px;
@@ -234,7 +231,24 @@ a {
 #section6.show{
     opacity: 1;
 }
-
+/*section1*/
+#section1 #autoType {
+    margin-top: 20vh;
+    min-height: 20vh;
+}
+#autoType:after{
+    content:"|";
+    animation: cursor .6s infinite;
+    font-style: normal;
+}
+@keyframes cursor{
+    0% {
+        opacity:1;
+    }
+    100% {
+        opacity:0;
+    }
+}
 /*section2*/
 #section2{
     background-image: linear-gradient(
@@ -255,13 +269,13 @@ a {
     );
     background-size: 60px 60px;
     background-position: 0 0;
-    animation: slide 4s infinite linear;
+    animation: movebg 4s infinite linear;
 }
 #section2 h2{
     color: #222;
 }
 
-@keyframes slide {
+@keyframes movebg {
     from {
       background-position: 0 0;
     }
@@ -528,7 +542,250 @@ a {
         opacity: .5;
     }
 }
+/*section4*/
+.iphone, .ipad {
+    display: inline-block;
+    color: #fff;
+    text-align: center;
+    text-shadow: 0 0 0.5em #000;
+    background-color: #000;
+    background-size: auto 200%, cover;
+    border: solid #111;
+    margin-bottom: 2em;
+    -webkit-box-shadow: 0 0.5em 2em 0.2em rgba(0, 0, 0, 0.33), 0 0 0 0.5px #000 inset;
+            box-shadow: 0 0.5em 2em 0.2em rgba(0, 0, 0, 0.33), 0 0 0 0.5px #000 inset;
+    -webkit-transition: all .1s linear, line-height 0s linear;
+    transition: all .1s linear, line-height 0s linear;
+    background-position: 50% 100%, center;
+    -webkit-transform-origin: bottom center;
+            transform-origin: bottom center;
+}
+
+.ipad {
+    margin-left: 2em;
+    height: 60vmin;
+    width: 41.9vmin;
+    line-height: 60vmin;
+    border-width: 3vmin;
+    border-radius: 4.2vmin;
+    background-image: url(../images/procello.png);
+    background-position: 0 0;
+    background-repeat: no-repeat;
+    background-size: cover;
+    cursor: pointer;
+    transition: all 6s;
+}
+.ipad:hover{
+    background-position: 100% 100%;
+}
+
 /*section5*/
+.iphone {
+    width: 23vmin;
+    height: 51vmin;
+    line-height: 51vmin;
+    border-width: 1.5vmin;
+    border-radius: 4vmin;
+}
+
+/*section6*/
+@font-face {
+    font-family: Clip;
+    src: url("https://acupoftee.github.io/fonts/Clip.ttf");
+}
+#section6{
+    background-image: linear-gradient(335deg, black 23px, transparent 23px),
+      linear-gradient(155deg, black 23px, transparent 23px),
+      linear-gradient(335deg, black 23px, transparent 23px),
+      linear-gradient(155deg, black 23px, transparent 23px);
+    background-size: 58px 58px;
+    background-position: 0px 2px, 4px 35px, 29px 31px, 34px 6px;
+} 
+.sign {
+    background-image: radial-gradient(
+        ellipse 50% 35% at 50% 50%,
+        #6b1839,
+        transparent
+    );
+    letter-spacing: 2;
+    font-family: "Clip";
+    text-transform: uppercase;
+    font-size: 6em;
+    color: #ffe6ff;
+    text-shadow: 0 0 0.6rem #ffe6ff, 0 0 1.5rem #ff65bd,
+        -0.2rem 0.1rem 1rem #ff65bd, 0.2rem 0.1rem 1rem #ff65bd,
+        0 -0.5rem 2rem #ff2483, 0 0.5rem 3rem #ff2483;
+    animation: shine 2s forwards, flicker 3s infinite;
+}
+
+@keyframes blink {
+    0%,
+    22%,
+    36%,
+    75% {
+        color: #ffe6ff;
+        text-shadow: 0 0 0.6rem #ffe6ff, 0 0 1.5rem #ff65bd,
+        -0.2rem 0.1rem 1rem #ff65bd, 0.2rem 0.1rem 1rem #ff65bd,
+        0 -0.5rem 2rem #ff2483, 0 0.5rem 3rem #ff2483;
+    }
+    28%,
+    33% {
+        color: #ff65bd;
+        text-shadow: none;
+    }
+    82%,
+    97% {
+        color: #ff2483;
+        text-shadow: none;
+    }
+}
+
+.flicker {
+    animation: shine 2s forwards, blink 3s 2s infinite;
+}
+
+.fast-flicker {
+    animation: shine 2s forwards, blink 10s 1s infinite;
+}
+
+@keyframes shine {
+    0% {
+        color: #6b1839;
+        text-shadow: none;
+    }
+    100% {
+        color: #ffe6ff;
+        text-shadow: 0 0 0.6rem #ffe6ff, 0 0 1.5rem #ff65bd,
+        -0.2rem 0.1rem 1rem #ff65bd, 0.2rem 0.1rem 1rem #ff65bd,
+        0 -0.5rem 2rem #ff2483, 0 0.5rem 3rem #ff2483;
+    }
+}
+
+@keyframes flicker {
+    from {
+        opacity: 1;
+    }
+
+    4% {
+        opacity: 0.9;
+    }
+
+    6% {
+        opacity: 0.85;
+    }
+
+    8% {
+        opacity: 0.95;
+    }
+
+    10% {
+        opacity: 0.9;
+    }
+
+    11% {
+        opacity: 0.922;
+    }
+
+    12% {
+        opacity: 0.9;
+    }
+
+    14% {
+        opacity: 0.95;
+    }
+
+    16% {
+        opacity: 0.98;
+    }
+
+    17% {
+        opacity: 0.9;
+    }
+
+    19% {
+        opacity: 0.93;
+    }
+
+    20% {
+        opacity: 0.99;
+    }
+
+    24% {
+        opacity: 1;
+    }
+
+    26% {
+        opacity: 0.94;
+    }
+
+    28% {
+        opacity: 0.98;
+    }
+
+    37% {
+        opacity: 0.93;
+    }
+
+    38% {
+        opacity: 0.5;
+    }
+
+    39% {
+        opacity: 0.96;
+    }
+
+    42% {
+        opacity: 1;
+    }
+
+    44% {
+        opacity: 0.97;
+    }
+
+    46% {
+        opacity: 0.94;
+    }
+
+    56% {
+        opacity: 0.9;
+    }
+
+    58% {
+        opacity: 0.9;
+    }
+
+    60% {
+        opacity: 0.99;
+    }
+
+    68% {
+        opacity: 1;
+    }
+
+    70% {
+        opacity: 0.9;
+    }
+
+    72% {
+        opacity: 0.95;
+    }
+
+    93% {
+        opacity: 0.93;
+    }
+
+    95% {
+        opacity: 0.95;
+    }
+
+    97% {
+        opacity: 0.93;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
 
 @media (max-width: 800px){
     #nav .menu {
