--- a/style/p1.css
+++ b/style/p1.css
@@ -529,42 +529,17 @@ a {
     top: 55%;
     transform: translateY(-50%);
     z-index: 98;
+    transition: 0.6s ease;
 }
 .slide_btn .prev{
     transform: rotate(135deg);
     -webkit-transform: rotate(135deg);
     left: 5vw;
-    animation-name: prev;
-    animation-timing-function: ease-in-out;
-    animation-duration: 1s;
-    animation-iteration-count: infinite;
 }
 .slide_btn .next{
     transform: rotate(-45deg);
     -webkit-transform: rotate(-45deg);
     right: 5vw;
-    animation-name: next;
-    animation-timing-function: ease-in-out;
-    animation-duration: 1s;
-    animation-iteration-count: infinite;
-}
-@keyframes prev{
-    from {
-        left: 5vw;
-        opacity: 1;
-    } to {
-        left: 4.5vw;
-        opacity: .5;
-    }
-}
-@keyframes next{
-    rom {
-        right: 5vw;
-        opacity: 1;
-    } to {
-        right: 4.5vw;
-        opacity: .5;
-    }
 }
 /*section4*/
 .iphone{
