--- a/style/p1.css
+++ b/style/p1.css
@@ -578,6 +578,28 @@ a {
    height: 100%;
 }
 /*section5*/
+.tab {
+    overflow: hidden;
+    background-color: #f1f1f1;
+}
+.tab button {
+    float: left;
+    cursor: pointer;
+    padding: 2rem;
+    transition: all 0.3s;
+    font-size: 1rem;
+}
+.tab button:hover {
+    background-color: #ddd;
+}
+.tab button.active {
+    background-color: #000;
+}
+.tabcontent {
+    display: none;
+    padding: 2rem;
+    border-top: none;
+}
 /*section6*/
 @font-face {
     font-family: Clip;
