--- a/style/p1.css
+++ b/style/p1.css
@@ -578,27 +578,37 @@ a {
    height: 100%;
 }
 /*section5*/
+#section5 > div{
+    width: 80vw;
+}
 .tab {
+    width: inherit;
     overflow: hidden;
-    background-color: #f1f1f1;
+    background-color: transparent;
 }
 .tab button {
+    width: 25%;
     float: left;
     cursor: pointer;
     padding: 2rem;
     transition: all 0.3s;
     font-size: 1rem;
+    outline: none;
+    border: 0;
+    background-color: transparent;
+    background: url(../images/bits.png) center center no-repeat;
+    background-size: contain;
 }
 .tab button:hover {
-    background-color: #ddd;
-}
-.tab button.active {
-    background-color: #000;
+    background-color: rgba(255,255,255,.4);
 }
 .tabcontent {
+    width: inherit;
+    min-height: 70vh;
     display: none;
     padding: 2rem;
-    border-top: none;
+    box-sizing: border-box;
+    outline:10px solid red;
 }
 /*section6*/
 @font-face {
