--- a/style/p1.css
+++ b/style/p1.css
@@ -578,13 +578,13 @@ a {
     width: 100%;
     height: 8%;
 }
-.messenger .m1 > div{
+.messenger .m1 > div p{
     clear: both;
 }
-.messenger .m1 .w1{
+.messenger .m1 .w1 p{
     float:left;
 }
-.messenger .m1 .w2{
+.messenger .m1 .w2 p{
     float: right;
 }
 .messenger .m1 > .w1 > p, .messenger .m1 > .w2 > p{
@@ -593,6 +593,9 @@ a {
     border-radius: .5rem;
 }
 .messenger .m1 .w1 > p{
+    display: block;
+    
+    width: auto;
     background: #e6e6e6;
 }
 .messenger .m1 .w2 > p{
